@@ -1,9 +1,11 @@
 package br.com.fiap.pedido.app.controller.unit;
 
 import br.com.fiap.pedido.app.controller.PedidoController;
-import br.com.fiap.pedido.app.dto.ItemPedidoDTO;
-import br.com.fiap.pedido.app.dto.PedidoRequestDTO;
-import br.com.fiap.pedido.app.dto.PedidoResponseDTO;
+import br.com.fiap.pedido.app.dto.pagamento.PagamentoDTO;
+import br.com.fiap.pedido.app.dto.pedido.ItemPedidoDTO;
+import br.com.fiap.pedido.app.dto.pedido.PedidoRequestDTO;
+import br.com.fiap.pedido.app.dto.pedido.PedidoResponseDTO;
+import br.com.fiap.pedido.core.domain.model.StatusPagamento;
 import br.com.fiap.pedido.core.domain.usecase.PedidoService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
@@ -18,7 +20,6 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -50,75 +51,130 @@ class PedidoControllerTest {
     }
 
     @Test
-    void deveCriarPedido() throws Exception {
+    void shouldCreatePedidoSuccessfully() throws Exception {
+        UUID clienteId = UUID.randomUUID();
+        UUID pagamentoId = UUID.randomUUID();
+        UUID produtoId = UUID.randomUUID();
+
         PedidoRequestDTO dto = new PedidoRequestDTO(
-                UUID.randomUUID(),
-                List.of(new ItemPedidoDTO(UUID.randomUUID(), 2, new BigDecimal("10.00")))
+                clienteId,
+                List.of(new ItemPedidoDTO(produtoId, 2, new BigDecimal("10.00"))),
+                pagamentoId
+        );
+
+        PagamentoDTO pagamento = new PagamentoDTO(
+                pagamentoId,
+                StatusPagamento.AGUARDANDO,
+                "CARTAO_CREDITO",
+                LocalDateTime.now()
         );
 
         PedidoResponseDTO resposta = new PedidoResponseDTO(
                 UUID.randomUUID(),
-                dto.clienteId(),
+                clienteId,
                 LocalDateTime.now(),
                 "CRIADO",
                 new BigDecimal("20.00"),
-                dto.itens()
+                dto.itens(),
+                pagamento
         );
 
         Mockito.when(pedidoService.criarPedido(any())).thenReturn(resposta);
 
-        mockMvc.perform(post("/api/v1/pedidos")
+        mockMvc.perform(post("/internal/api/v1/")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(dto)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.status").value("CRIADO"))
-                .andExpect(jsonPath("$.valorTotal").value(20.00));
+                .andExpect(jsonPath("$.valorTotal").value(20.00))
+                .andExpect(jsonPath("$.pagamento.statusPagamento").value("AGUARDANDO"))
+                .andExpect(jsonPath("$.pagamento.metodoPagamento").value("CARTAO_CREDITO"));
     }
 
     @Test
-    void deveBuscarPedidoPorId() throws Exception {
-        UUID id = UUID.randomUUID();
+    void shouldReturnPedidoById() throws Exception {
+        UUID pedidoId = UUID.randomUUID();
+        UUID clienteId = UUID.randomUUID();
+        UUID pagamentoId = UUID.randomUUID();
 
-        PedidoResponseDTO resposta = new PedidoResponseDTO(
-                id,
-                UUID.randomUUID(),
-                LocalDateTime.now(),
-                "CRIADO",
-                new BigDecimal("100.00"),
-                Collections.emptyList()
+        List<ItemPedidoDTO> itens = List.of(
+                new ItemPedidoDTO(UUID.randomUUID(), 1, new BigDecimal("50.00"))
         );
 
-        Mockito.when(pedidoService.buscarPorId(id)).thenReturn(resposta);
+        PagamentoDTO pagamento = new PagamentoDTO(
+                pagamentoId,
+                StatusPagamento.AGUARDANDO,
+                "CARTAO_CREDITO",
+                LocalDateTime.now()
+        );
 
-        mockMvc.perform(get("/api/v1/pedidos/" + id))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(id.toString()))
-                .andExpect(jsonPath("$.status").value("CRIADO"));
-    }
-
-    @Test
-    void deveListarPedidos() throws Exception {
-        PedidoResponseDTO pedido = new PedidoResponseDTO(
-                UUID.randomUUID(),
-                UUID.randomUUID(),
+        PedidoResponseDTO resposta = new PedidoResponseDTO(
+                pedidoId,
+                clienteId,
                 LocalDateTime.now(),
                 "CRIADO",
                 new BigDecimal("50.00"),
-                Collections.emptyList()
+                itens,
+                pagamento
         );
 
-        Mockito.when(pedidoService.listarTodos()).thenReturn(Collections.singletonList(pedido));
+        Mockito.when(pedidoService.buscarPorId(pedidoId)).thenReturn(resposta);
 
-        mockMvc.perform(get("/api/v1/pedidos"))
+        mockMvc.perform(get("/internal/api/v1/" + pedidoId))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].status").value("CRIADO"));
+                .andExpect(jsonPath("$.id").value(pedidoId.toString()))
+                .andExpect(jsonPath("$.status").value("CRIADO"))
+                .andExpect(jsonPath("$.valorTotal").value(50.00))
+                .andExpect(jsonPath("$.pagamento.statusPagamento").value("AGUARDANDO"))
+                .andExpect(jsonPath("$.pagamento.metodoPagamento").value("CARTAO_CREDITO"));
     }
 
     @Test
-    void deveCancelarPedido() throws Exception {
+    void shouldListAllPedidos() throws Exception {
+        UUID pedidoId = UUID.randomUUID();
+        UUID clienteId = UUID.randomUUID();
+        UUID pagamentoId = UUID.randomUUID();
+        UUID produtoId = UUID.randomUUID();
+
+        List<ItemPedidoDTO> itens = List.of(
+                new ItemPedidoDTO(produtoId, 1, new BigDecimal("50.00"))
+        );
+
+        PagamentoDTO pagamento = new PagamentoDTO(
+                pagamentoId,
+                StatusPagamento.AGUARDANDO,
+                "CARTAO_CREDITO",
+                LocalDateTime.now()
+        );
+
+        PedidoResponseDTO pedido = new PedidoResponseDTO(
+                pedidoId,
+                clienteId,
+                LocalDateTime.now(),
+                "CRIADO",
+                new BigDecimal("50.00"),
+                itens,
+                pagamento
+        );
+
+        Mockito.when(pedidoService.listarTodos()).thenReturn(List.of(pedido));
+
+        mockMvc.perform(get("/internal/api/v1/"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].id").value(pedidoId.toString()))
+                .andExpect(jsonPath("$[0].status").value("CRIADO"))
+                .andExpect(jsonPath("$[0].valorTotal").value(50.00))
+                .andExpect(jsonPath("$[0].pagamento.statusPagamento").value("AGUARDANDO"))
+                .andExpect(jsonPath("$[0].pagamento.metodoPagamento").value("CARTAO_CREDITO"));
+    }
+
+    @Test
+    void shouldCancelPedidoById() throws Exception {
         UUID id = UUID.randomUUID();
 
-        mockMvc.perform(put("/api/v1/pedidos/" + id + "/cancelar"))
+        Mockito.doNothing().when(pedidoService).cancelarPedido(id);
+
+        mockMvc.perform(put("/internal/api/v1/" + id + "/cancelar"))
                 .andExpect(status().isNoContent());
 
         Mockito.verify(pedidoService).cancelarPedido(id);
